--- a/.gitignore
+++ b/.gitignore
@@ -29,15 +29,14 @@ node_modules/
 
 
 # Typescript build info
-# *.tsbuildinfo
 .firebaserc
-# .eslintrc.js
 .firebase/hosting.ZG9jcy8udnVlcHJlc3MvZGlzdA.cache
+firebase.json
 # .editorconfig
 # .commitlintrc.js
 # .eslintignore
 # .gitattributes
-# *.lock
+*.lock
 Icon[^M]
 *.zip
 !/.gitignore
