--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 docs/.vuepress/.temp/
 docs/.vuepress/.cache/
 docs/.vuepress/dist/
-docs/.vuepress/
+docs/.vuepress/components
 # Dist files
 lib/
 
