--- a/package.json
+++ b/package.json
@@ -55,13 +55,12 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "@algolia/client-search": "^4.10.5",
     "@vue/component-compiler-utils": "^3.2.2",
-    "@vuepress/shared-utils": "^1.8.2",
     "autoprefixer": "^10.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typerscript": "^0.2.3",
+    "vuepress-plugin-zenlive2d-cat": "^1.1.1",
     "webpack": "^5.51.1"
   }
 }
