--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@vue/component-compiler-utils": "^3.2.2",
     "autoprefixer": "^10.3.3",
+    "tinycolor2": "^1.4.2",
     "vuepress-plugin-zenlive2d-cat": "^1.1.1",
     "webpack": "^5.51.1"
   }
