--- a/package.json
+++ b/package.json
@@ -33,25 +33,26 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
-    "@types/jest": "^27.0.1",
+    "@types/jest": "^27.0.2",
     "anywhere": "^1.5.0",
     "cpx2": "^4.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-vuepress": "^3.3.0",
     "eslint-config-vuepress-typescript": "^2.3.0",
-    "jest": "^27.2.0",
+    "jest": "^27.2.4",
     "jest-serializer-vue": "^2.0.2",
     "lerna": "^4.0.0",
     "lint-staged": "^11.1.2",
     "prettier": "2.4.1",
     "prettier-config-vuepress": "^1.2.0",
     "rimraf": "^3.0.2",
-    "sort-package-json": "^1.51.0",
+    "sort-package-json": "^1.52.0",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@snippetors/vuepress-plugin-tabs": "^1.1.0",
     "vuepress-plugin-zenlive2d-cat": "^1.1.1"
   }
 }
