--- a/packages/vuepress/package.json
+++ b/packages/vuepress/package.json
@@ -20,9 +20,7 @@
   "author": "Evan You",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "bin": {
-    "vuepress": "bin/vuepress.js"
-  },
+  "bin": "bin/vuepress.js",
   "files": [
     "bin",
     "lib"
