--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,6 @@
-name: Algolia Indexer
-
-on:
-  push:
-    branches: [ main ]
-
-jobs:
-  algolia_indexer:
-    runs-on: ubuntu-latest
-    env:
-      APPLICATION_ID: 3CJDV2AFXL
-      API_KEY: ff7ab8030ae3f5983ef3e120c8a60b07
-      INDEX_NAME: ctuvn
-      CONFIG: '{"index_name":"ctuvn","start_urls":["https://zenctu.web.app"],"stop_urls":[],"selectors":{"lvl0":{"selector":".sidebar-heading.active","global":true,"default_value":"Documentation"},"lvl1":".theme-default-content h1","lvl2":".theme-default-content h2","lvl3":".theme-default-content h3","lvl4":".theme-default-content h4","lvl5":".theme-default-content h5","text":".theme-default-content p, .theme-default-content li","lang":{"selector":"/html/@lang","type":"xpath","global":true}},"custom_settings":{"custom_settings":{"attributesForFaceting":["lang"]}}}'
-    name: Index Algolia
-    steps:
-    - name: Algolia Docsearch Action
-      id: algolia
-      uses:  adapttive/algolia-docsearch-action@1.1.1
+- uses: actions/checkout@v2
+- uses: darrenjennings/algolia-docsearch-action@master
+  with:
+    algolia_application_id: '3CJDV2AFXL'
+    algolia_api_key: 'ff7ab8030ae3f5983ef3e120c8a60b07'
+    file: 'zenfection1412/zenctu/config.json'
