--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,14 +6,9 @@ on:
       - 'main'
 
 jobs:
-  algolia:
-    runs-on: ubuntu-latest
-    name: Algolia Sync
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: opstrace/algolia-docs-sync@v1.0.2
-        with:
-          algoliaId: '3CJDV2AFXL'
-          algoliaKey: 'f7ab8030ae3f5983ef3e120c8a60b07'
-          algoliaIndex: 'ctuvn'
+  - name: Push indices to Algolia
+    uses: signcl/docsearch-scraper-action@master
+    env:
+      APPLICATION_ID: '3CJDV2AFXL'
+      API_KEY: 'f7ab8030ae3f5983ef3e120c8a60b07'
+      CONFIG: '{"index_name":"ctuvn","start_urls":["https://zenctu.web.app"],"stop_urls":[],"selectors":{"lvl0":{"selector":".sidebar-heading.active","global":true,"default_value":"Documentation"},"lvl1":".theme-default-content h1","lvl2":".theme-default-content h2","lvl3":".theme-default-content h3","lvl4":".theme-default-content h4","lvl5":".theme-default-content h5","text":".theme-default-content p, .theme-default-content li","lang":{"selector":"/html/@lang","type":"xpath","global":true}},"custom_settings":{"custom_settings":{"attributesForFaceting":["lang"]}}}'
