--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,24 @@
-name: Sync Algolia
+name: zenctu
 
 on:
   push:
-    branches:
-      - 'main'
+    branches: [ main ]
 
 jobs:
-    uses: signcl/docsearch-scraper-action@master
-    env:
-      APPLICATION_ID: '3CJDV2AFXL'
-      API_KEY: 'f7ab8030ae3f5983ef3e120c8a60b07'
-      CONFIG: '{"index_name":"ctuvn","start_urls":["https://zenctu.web.app"],"stop_urls":[],"selectors":{"lvl0":{"selector":".sidebar-heading.active","global":true,"default_value":"Documentation"},"lvl1":".theme-default-content h1","lvl2":".theme-default-content h2","lvl3":".theme-default-content h3","lvl4":".theme-default-content h4","lvl5":".theme-default-content h5","text":".theme-default-content p, .theme-default-content li","lang":{"selector":"/html/@lang","type":"xpath","global":true}},"custom_settings":{"custom_settings":{"attributesForFaceting":["lang"]}}}'
+  upload_algolia_index:
+    runs-on: ubuntu-latest
+    name: Update Algolia Index
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - uses: tilburgsciencehub/algolia-uploader@master
+      with:
+        # Algolia app id
+        app_id: 3CJDV2AFXL
+        # Secret token in the organization's 'Setting > Secrets'
+        admin_key: ff7ab8030ae3f5983ef3e120c8a60b07
+        # The index name
+        index_name: ctuvn
+        # The index file path relative to repo root.
+        index_file_path: config.json
