--- a/packages/vuepress/package.json
+++ b/packages/vuepress/package.json
@@ -20,7 +20,9 @@
   "author": "Evan You",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "bin": "bin/vuepress.js",
+  "bin": {
+    "vuepress": "bin/vuepress.js"
+  },
   "files": [
     "bin",
     "lib"
