--- a/config.json
+++ b/config.json
@@ -3,7 +3,11 @@
   "start_urls": ["https://zenctu.web.app"],
   "stop_urls": [],
   "selectors": {
-    "lvl0": ".sidebar-heading.active",
+    "lvl0": {
+      "selector": ".sidebar-heading.active",
+      "global": true,
+      "default_value": "Documentation"
+    },
     "lvl1": ".theme-default-content h1",
     "lvl2": ".theme-default-content h2",
     "lvl3": ".theme-default-content h3",
