--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "lint": "eslint --ext .js,.ts,.vue .",
     "release": "yarn lint && yarn clean && yarn copy && yarn build && yarn test && lerna publish prerelease --dist-tag next",
     "test": "jest --runInBand",
-    "test:coverage": "yarn copy && yarn build && yarn test --coverage",
-    "packages:update": "ncu --timeout 600000"
+    "test:coverage": "yarn copy && yarn build && yarn test --coverage"
   },
   "lint-staged": {
     "*.{js,ts,vue}": "eslint --fix",
@@ -32,7 +31,7 @@
   },
   "prettier": "prettier-config-vuepress",
   "devDependencies": {
-    "@commitlint/cli": "^16.2.1",
+    "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@types/jest": "^27.4.1",
     "anywhere": "^1.5.0",
@@ -44,16 +43,16 @@
     "jest": "^27.5.1",
     "jest-serializer-vue": "^2.0.2",
     "lerna": "^4.0.0",
-    "lint-staged": "^12.3.5",
-    "prettier": "^2.5.1",
+    "lint-staged": "^12.3.7",
+    "prettier": "^2.6.0",
     "prettier-config-vuepress": "^1.3.0",
     "rimraf": "^3.0.2",
-    "sort-package-json": "^1.54.0",
+    "sort-package-json": "^1.55.0",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "@snippetors/vuepress-plugin-tabs": "^1.1.6",
+    "@snippetors/vuepress-plugin-tabs": "^1.1.7",
     "vuepress-plugin-zenlive2d-cat": "^1.1.1"
   }
 }
