--- a/packages/@vuepress/plugin-docsearch/package.json
+++ b/packages/@vuepress/plugin-docsearch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vuepress/plugin-docsearch",
-  "version": "2.0.0-beta.36",
+  "version": "2.0.0-beta.37",
   "description": "VuePress plugin - docsearch",
   "keywords": [
     "vuepress-plugin",
@@ -30,17 +30,18 @@
     "clean": "rimraf lib *.tsbuildinfo"
   },
   "dependencies": {
-    "@docsearch/css": "3.0.0-alpha.42",
-    "@docsearch/js": "3.0.0-alpha.42",
-    "@docsearch/react": "3.0.0-alpha.42",
-    "@types/react": "^17.0.38",
-    "@vuepress/client": "2.0.0-beta.35",
-    "@vuepress/core": "2.0.0-beta.36",
-    "@vuepress/shared": "2.0.0-beta.35",
-    "@vuepress/utils": "2.0.0-beta.35",
-    "preact": "^10.6.4",
-    "vue": "^3.2.28",
-    "vue-router": "^4.0.12"
+    "@docsearch/css": "^3.0.0",
+    "@docsearch/js": "^3.0.0",
+    "@docsearch/react": "^3.0.0",
+    "@types/react": "^17.0.43",
+    "@vuepress/client": "2.0.0-beta.37",
+    "@vuepress/core": "2.0.0-beta.37",
+    "@vuepress/shared": "2.0.0-beta.37",
+    "@vuepress/utils": "2.0.0-beta.37",
+    "preact": "^10.7.0",
+    "ts-debounce": "^4.0.0",
+    "vue": "^3.2.31",
+    "vue-router": "^4.0.14"
   },
   "publishConfig": {
     "access": "public"
