--- a/packages/@vuepress/plugin-search/package.json
+++ b/packages/@vuepress/plugin-search/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vuepress/plugin-search",
-  "version": "2.0.0-beta.36",
+  "version": "2.0.0-beta.37",
   "description": "VuePress plugin - built-in search",
   "keywords": [
     "vuepress-plugin",
@@ -29,17 +29,17 @@
     "copy": "cpx \"src/**/*.{d.ts,css,svg}\" lib"
   },
   "dependencies": {
-    "@vuepress/client": "2.0.0-beta.35",
-    "@vuepress/core": "2.0.0-beta.36",
-    "@vuepress/shared": "2.0.0-beta.35",
-    "@vuepress/utils": "2.0.0-beta.35",
+    "@vuepress/client": "2.0.0-beta.37",
+    "@vuepress/core": "2.0.0-beta.37",
+    "@vuepress/shared": "2.0.0-beta.37",
+    "@vuepress/utils": "2.0.0-beta.37",
     "chokidar": "^3.5.3",
-    "vue": "^3.2.28",
-    "vue-router": "^4.0.12"
+    "vue": "^3.2.31",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.16.3",
-    "vite": "^2.7.13"
+    "vite": "~2.8.6"
   },
   "publishConfig": {
     "access": "public"
